--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
-    <title>React App</title>
+    <title>JPP Project Mgmt</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
